--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Flexmile</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Flexmile – nowoczesna platforma najmu samochodów dla Firm. Zero wpłaty własnej, szybki proces, atrakcyjne niskie raty. Wybierz auto, a My zajmiemy się resztą! 1,2,3…Jeździsz Ty!">
   <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96"/>
   <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
   <link rel="shortcut icon" href="favicon.ico"/>
