--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,46 @@
 <!doctype html>
-<html lang="en">
+<html lang="pl">
 <head>
   <meta charset="utf-8">
-  <title>Flexmile</title>
+  <title>Flexmile - Wynajem samochodów dla Firm</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Flexmile – nowoczesna platforma najmu samochodów dla Firm. Zero wpłaty własnej, szybki proces, atrakcyjne niskie raty. Wybierz auto, a My zajmiemy się resztą! 1,2,3…Jeździsz Ty!">
+  <meta name="keywords" content="wynajem samochodów, leasing samochodów, najem aut dla firm, samochody firmowe, flexmile">
+  <meta name="author" content="Flexmile">
+  <meta name="robots" content="index, follow">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://flexmile.pl/">
+  <meta property="og:title" content="Flexmile - Wynajem samochodów dla Firm">
+  <meta property="og:description" content="Flexmile – nowoczesna platforma najmu samochodów dla Firm. Zero wpłaty własnej, szybki proces, atrakcyjne niskie raty.">
+  <meta property="og:image" content="https://flexmile.pl/layout/images/og-image.jpg">
+  <meta property="og:locale" content="pl_PL">
+  <meta property="og:site_name" content="Flexmile">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://flexmile.pl/">
+  <meta name="twitter:title" content="Flexmile - Wynajem samochodów dla Firm">
+  <meta name="twitter:description" content="Flexmile – nowoczesna platforma najmu samochodów dla Firm. Zero wpłaty własnej, szybki proces, atrakcyjne niskie raty.">
+  <meta name="twitter:image" content="https://flexmile.pl/layout/images/og-image.jpg">
+  
+  <!-- Resource Hints for Performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+  
+  <!-- Preload Critical Resources -->
+  <link rel="preload" href="/layout/images/og-image.jpg" as="image" type="image/jpeg">
+  
+  <!-- Icons -->
   <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96"/>
   <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
   <link rel="shortcut icon" href="favicon.ico"/>
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png"/>
   <meta name="apple-mobile-web-app-title" content="Flexmile"/>
   <link rel="manifest" href="site.webmanifest"/>
+  
 </head>
 <body>
 <app-root></app-root>
