--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
   <meta name="author" content="Flexmile">
   <meta name="robots" content="index, follow">
   
+  <!-- Performance: Preconnect to API for faster requests -->
+  <link rel="preconnect" href="https://api.flexmile.pl" crossorigin>
+  <link rel="dns-prefetch" href="https://api.flexmile.pl">
+  
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://flexmile.pl/">
@@ -27,6 +31,14 @@
   <!-- Resource Hints for Performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+  
+  <!-- Preload Critical Resources for LCP -->
+  <link rel="preload" href="/layout/images/hero-img.webp" as="image" type="image/webp" fetchpriority="high">
+  
+  <!-- Preload Critical Fonts -->
+  <link rel="preload" href="/layout/fonts/Alexandria-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="/layout/fonts/Alexandria-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="/layout/fonts/Alexandria-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   
   <!-- Icons -->
   <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96"/>
