--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
   <meta name="keywords" content="wynajem samochodów, leasing samochodów, najem aut dla firm, samochody firmowe, flexmile">
   <meta name="author" content="Flexmile">
   <meta name="robots" content="index, follow">
-  
+
   <!-- Performance: Preconnect to API for faster requests -->
   <link rel="preconnect" href="https://api.flexmile.pl" crossorigin>
   <link rel="dns-prefetch" href="https://api.flexmile.pl">
-  
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://flexmile.pl/">
@@ -21,25 +21,25 @@
   <meta property="og:description" content="Flexmile – nowoczesna platforma najmu samochodów dla Firm. Zero wpłaty własnej, szybki proces, atrakcyjne niskie raty.">
   <meta property="og:locale" content="pl_PL">
   <meta property="og:site_name" content="Flexmile">
-  
+
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://flexmile.pl/">
   <meta name="twitter:title" content="Flexmile - Wynajem samochodów dla Firm">
   <meta name="twitter:description" content="Flexmile – nowoczesna platforma najmu samochodów dla Firm. Zero wpłaty własnej, szybki proces, atrakcyjne niskie raty.">
-  
+
   <!-- Resource Hints for Performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="dns-prefetch" href="https://fonts.googleapis.com">
-  
+
   <!-- Preload Critical Resources for LCP -->
   <link rel="preload" href="/layout/images/hero-img.webp" as="image" type="image/webp" fetchpriority="high">
-  
+
   <!-- Preload Critical Fonts -->
   <link rel="preload" href="/layout/fonts/Alexandria-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="/layout/fonts/Alexandria-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="/layout/fonts/Alexandria-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  
+
   <!-- Icons -->
   <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96"/>
   <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
@@ -47,7 +47,15 @@
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png"/>
   <meta name="apple-mobile-web-app-title" content="Flexmile"/>
   <link rel="manifest" href="site.webmanifest"/>
-  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17883080050">
+  </script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-17883080050');
+  </script>
 </head>
 <body>
 <app-root></app-root>
